--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "ali-oss": "^6.17.1",
     "lodash": "^4.17.21",
     "md5-file": "^5.0.0"
   }
